apply cr